--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href='https://fonts.googleapis.com/css?family=Princess Sofia' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Amarante' rel='stylesheet'>
 <link rel="icon" href="./images/favicon.png" sizes="16x16">
-  <title>Women Safety</title>
+  <title>Empowered</title>
   <meta name="description" content="website description">
   <meta name="keywords" content="website keywords, website keywords">
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
