--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <link href='https://fonts.googleapis.com/css?family=Bonbon' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Princess Sofia' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Amarante' rel='stylesheet'>
-<link rel="icon" href="./images/favicon.png" sizes="16x16">
+<link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&family=Poppins:wght@100&display=swap" rel="stylesheet">
+<link rel="icon" href="./images/favicon.png" size="16x16">
   <title>Empowered</title>
   <meta name="description" content="website description">
   <meta name="keywords" content="website keywords, website keywords">
@@ -20,8 +21,8 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="#"><span class="logo_colour"> Hey!!! &nbsp</span><span class="logo_colour2">Making Sure Your Safety</span></a></h1>
-          <h2>Take care of yourself. Many people out there loves you</h2>
+          <h1><a href="#"><span class="logo_colour"> Empowered &nbsp</span><span class="logo_colour2"></span></a></h1>
+          <h2>Take care of yourself. Many people out there love you</h2>
         </div>
       </div>
       <div id="menubar">
@@ -38,30 +39,27 @@
     <div id="site_content">
       <div class="sidebar">
         <!-- insert your sidebar items here -->
-        <h3>Latest News</h3>
-        <h4>Unsafe Workspace</h4>
-        <h5>Women being Molested in workplace</h5>
-        <p>Shivani Verma, a software engineer working in an MNC, who normally stayed back till late night at work was molested by her co-workers. She then complained about the same to the company officials and filed a case against the culprits. Culprits arrested the next hour.<br></p>
-        <p></p>
-        <h4>Say No to quiting jobs</h4>
-        <h5>Its time for culprits to stop crime. Let's all stand hand in hand</h5>
-        <p>Violence to women is taken very seriously by Indian Govt. and culprits are punished as soon as the crime is registered. Each and every organization has to follow rules and regulations to make sure safety of women. Say NO to quiting jobs and stay strong and bold<br></p>
-
+        <h2>Our Team</h2>
+        <h4>Pankaj Kumar Singh</h4>
+        <h5>13000120006</h5>
+        <h4>Piyush Priyadarshi</h4>
+        <h5>13000120011</h5>
+        <h4>Anupam Suman</h4>
+        <h5>13000120022</h5>
+        <h4>Ashutosh Tiwari</h4>
+        <h5>13000120025</h5>
+        
       </div>
       <div id="content">
         <!-- insert the page content here -->
-        <h1 style="text-align: left;">Nayana Singh</h1>
+        <h2 style="text-align: left;">How We Help</h2>
         <form action="#" method="post">
           <div class="form_settings">
             <p><span>
-            India has been ranked as the most dangerous country out of the world’s 10 worst countries for women, behind Afghanistan, Pakistan and Somalia, according to a poll conducted by the Thomson Reuters Foundation.
-</br></br>
-The same poll conducted in 2011 had placed India at the fourth place. The findings are based on perceptions of experts on women’s issues.
-</br></br>
-India was followed by Afghanistan, Syria, Somalia, Saudi Arabia, Pakistan, Democratic Republic of Congo, Yemen, Nigeria and U.S.A — in that order.
+            India has been ranked as one of the most dangerous countries for women, behind Afghanistan, Pakistan and Somalia, according to a poll conducted by the Thomson Reuters Foundation.
 </br></br>
 “The world’s second most populous nation, with 1.3 billion people, ranked as the most dangerous on three of the topic questions — the risk of sexual violence and harassment against women, the danger women face from cultural, tribal and traditional practices, and the country where women are most in danger of human trafficking including forced labour, sex slavery and domestic servitude,” according to the Foundation.</span>
-             <img src="images/wallpaper.jpg" alt="BestPic" width="350" height="auto" align="right">
+             <img src="images/wallpaper.jpg" alt="BestPic" width="400" height="auto" align="centre">
             <!--<input class="contact" name="your_name" type="text"></p>
             <p><span>Email Address</span><input class="contact" name="your_email" type="text"></p>
             <p><span>Message</span><textarea class="contact textarea" rows="8" cols="50" name="your_enquiry"></textarea></p> -->
@@ -72,7 +70,7 @@ India was followed by Afghanistan, Syria, Somalia, Saudi Arabia, Pakistan, Democ
       </div>
     </div>
     <div id="footer">
-      With Love ❤️ Team Virus vixens<!--| <a href="http://validator.w3.org/check?uri=referer">HTML5</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | from <a href="http://www.html5webtemplates.co.uk/">free HTML5 templates</a> -->
+      Work In Progress...
     </div>
   </div>
 
